@@ -3,6 +3,8 @@ Hama Change Log
 Release 0.4 - Unreleased
 
   NEW FEATURES
+  
+   HAMA-456: Add getPeerName(int index) and getNumPeers() (edwardyoon)
    HAMA-431: MapReduce NG integration (tjungblut)
    HAMA-449: Add tasks num of Job to web UI (edwardyoon)
    HAMA-428: Create a separate maven module and add basic structure for the Graph (edwardyoon)
